# playground_excel_reader

./: CMakeLists.txt  Readme.md  main.cpp
Models/: DisputeModel.h
Services/: ExcelService.cpp  ExcelService.h
files/: DisputeATM_01-260124.xlsx
